argocd/homelab/harbor/harbor-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: harbor
  annotations:
    cert-manager.io/cluster-issuer: compaan-ca
spec:
  ingressClassName: traefik-private
  tls:
    - hosts:
        - harbor.compaan
      secretName: harbor-compaan-tls
  rules:
    - host: harbor.compaan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: harbor
                port:
                  number: 80
